# zwjira

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_zwjira.py
zwjira/: cli.py  commands.py  config.py  globals.py  jira.py  xray.py
